# opencast

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/org/opencast/tv/: MainActivity.kt  OpenCastApp.kt
android/app/src/main/kotlin/org/opencast/tv/airplay/: AirPlayRoutes.kt  AirPlayServer.kt  PlistBuilder.kt
android/app/src/main/kotlin/org/opencast/tv/core/: PositionInfo.kt  RendererCallback.kt  TransportState.kt  VolumeInfo.kt
android/app/src/main/kotlin/org/opencast/tv/dlna/: DlnaRendererServer.kt  DurationUtil.kt  GenaManager.kt  SoapHandler.kt  SsdpAdvertiser.kt  XmlTemplates.kt
android/app/src/main/kotlin/org/opencast/tv/player/: ExoPlayerWrapper.kt
android/app/src/main/kotlin/org/opencast/tv/service/: BootReceiver.kt  ReceiverService.kt
android/app/src/main/kotlin/org/opencast/tv/ui/screen/: ErrorScreen.kt  IdleScreen.kt  PlayerScreen.kt
android/app/src/main/kotlin/org/opencast/tv/ui/theme/: Theme.kt
android/app/src/main/kotlin/org/opencast/tv/ui/viewmodel/: MainViewModel.kt
android/app/src/main/res/drawable/: ic_banner.xml
android/app/src/main/res/raw/: av_transport_scpd.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
crates/opencast-airplay/: Cargo.toml
crates/opencast-airplay/src/: lib.rs  plist.rs  receiver.rs
crates/opencast-cli/: Cargo.toml
crates/opencast-cli/src/: main.rs
crates/opencast-core/: Cargo.toml
crates/opencast-core/src/: callback.rs  device.rs  error.rs  lib.rs  media.rs  player.rs  transport.rs
crates/opencast-discovery/: Cargo.toml
crates/opencast-discovery/src/: lib.rs  ssdp.rs
crates/opencast-dlna/: Cargo.toml
crates/opencast-dlna/src/: dmc.rs  dmr.rs  lib.rs  soap.rs  xml_templates.rs
crates/opencast-dlna/src/templates/: ConnectionManager.xml  RenderingControl.xml
crates/opencast-player/: Cargo.toml
crates/opencast-player/src/: lib.rs  mpv.rs
crates/opencast-server/: Cargo.toml
crates/opencast-server/src/: main.rs
docs/research/: technical-research.md
