[package]
name = "opencast-airplay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AirPlay media receiver for OpenCast"

[dependencies]
opencast-core.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
mdns-sd.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
bytes.workspace = true
