[package]
name = "opencast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line casting tool for OpenCast"

[dependencies]
opencast-core.workspace = true
opencast-discovery.workspace = true
opencast-dlna.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
url.workspace = true
