[package]
name = "opencast-dlna"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DLNA/UPnP media casting for OpenCast (DMC + DMR)"

[dependencies]
opencast-core.workspace = true
opencast-discovery.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
url.workspace = true
serde.workspace = true
bytes.workspace = true
chrono.workspace = true
socket2.workspace = true
